@@ -9,6 +9,12 @@ wallet 1.3 (unreleased)
     existing wallet database, use wallet-admin to register the new
     verifier.
 
+    A new ACL type, external (Wallet::ACL::External), is now supported.
+    This ACL runs an external command to check if access is allowed, and
+    passes the principal and the ACL identifier to that command.  To
+    enable this ACL type for an existing wallet database, use wallet-admin
+    to register the new verifier.
+
     A new variation on the ldap-attr ACL type, ldap-attr-root
     (Wallet::ACL::LDAP::Attribute::Root), is now supported.  This is
     similar to netdb-root (compared to netdb): the authenticated principal
